Including script.js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div id="startBtn">
+        <button id="startBtn">Start</button>
+    </div>
+
+    <div id="container" class="hidden">
+        <h1 id="title">Title</h1>
+        <p id="statement">Statement</p>
+
+        <button id="previousBtn">Previous</button>
+        <button id="nextBtn">Next</button>
+    </div>
     
     <script src="js/testdata.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
