When clicked on start button, show new title and statements

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="startBtn">
+    <div id="startContainer" class="hidden">
+        <h1>StemWijzer</h1>
+        <p>Dit is de stemwijzer opdracht.</p>
+        
         <button id="startBtn">Start</button>
     </div>
-
+    
     <div id="container" class="hidden">
         <h1 id="title">Title</h1>
         <p id="statement">Statement</p>
