Added id on <a></a> tag

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <button class="voteBtn">Geen van beide</button>
         <button class="voteBtn">Oneens</button>
 
-        <a href="#">Sla deze vraag over <i class="fas fa-arrow-right"></i></a>
+        <a href="#" id="skipStatement">Sla deze vraag over <i class="fas fa-arrow-right"></i></a>
     </div>
 
     <script src="js/testdata.js"></script>
