Change view after clicked on Start button

--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
 </head>
 <body>
     
-    <div id="container">
+    <div id="startContainer">
         <h1>StemWijzer</h1>
         <p>Dit is een stemwijzer.</p>
 
-        <button class="btn btn-info">Start</button>
+        <button id="startButton" class="btn btn-info">Start</button>
+    </div>
+
+    <div id="statementContainer" class="d-none">
+        <h1>Titel</h1>
+        <p>Statement</p>
     </div>
     
     <!-- Bootstrap javascript -->
