Show data from testdata.js

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </div>
 
     <div id="statementContainer" class="d-none">
-        <h1>Titel</h1>
-        <p>Statement</p>
+        <h1 id="title">Titel</h1>
+        <p id="statement">Statement</p>
     </div>
     
     <!-- Bootstrap javascript -->
