Go to the next statement

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <div id="statementContainer" class="d-none">
         <h1 id="title">Titel</h1>
         <p id="statement">Statement</p>
+
+        <button id="nextButton" class="btn btn-info">Next</button>
     </div>
     
     <!-- Bootstrap javascript -->
