Go to the next and previous statements

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         <h1 id="title">Titel</h1>
         <p id="statement">Statement</p>
 
-        <button id="nextButton" class="btn btn-info">Next</button>
+        <button class="buttons">Ga terug</button>
+        <button class="buttons">Eens</button>
+        <button class="buttons">Geen van beide</button>
+        <button class="buttons">Oneens</button>
+        <button class="buttons">Sla deze vraag over</button>
     </div>
     
     <!-- Bootstrap javascript -->
