Buttons have an id

--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
         <h1 id="title">Titel</h1>
         <p id="statement">Statement</p>
 
-        <button class="buttons">Ga terug</button>
-        <button class="buttons">Eens</button>
-        <button class="buttons">Geen van beide</button>
-        <button class="buttons">Oneens</button>
-        <button class="buttons">Sla deze vraag over</button>
+        <!-- id in buttons ipv tekst in button -->
+        <button id="goBackButton" class="buttons">Ga terug</button>
+        <button id="proButton" class="buttons">Eens</button>
+        <button id="noneButton" class="buttons">Geen van beide</button>
+        <button id="contraButton" class="buttons">Oneens</button>
+        <button id="skipButton" class="buttons">Sla deze vraag over</button>
     </div>
     
     <!-- Bootstrap javascript -->
