--- a/index.html
+++ b/index.html
@@ -20,16 +20,21 @@
         <button id="startButton" class="btn btn-info">Start</button>
     </div>
 
+    <button id="goBackButton" class="buttons d-none">Ga terug</button>
+
     <div id="statementContainer" class="d-none">
         <h1 id="title">Titel</h1>
         <p id="statement">Statement</p>
 
-        <!-- id in buttons ipv tekst in button -->
-        <button id="goBackButton" class="buttons">Ga terug</button>
         <button id="proButton" class="buttons">Eens</button>
         <button id="noneButton" class="buttons">Geen van beide</button>
         <button id="contraButton" class="buttons">Oneens</button>
         <button id="skipButton" class="buttons">Sla deze vraag over</button>
+    </div>
+
+    <div id="partyContainer" class="d-none">
+        <h1>Partijen</h1>
+        <p>De rest komt nog...</p>
     </div>
     
     <!-- Bootstrap javascript -->
