Name change for button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p id="statement">Statement</p>
 
         <button id="proButton" class="buttons">Eens</button>
-        <button id="noneButton" class="buttons">Geen van beide</button>
+        <button id="neitherButton" class="buttons">Geen van beide</button>
         <button id="contraButton" class="buttons">Oneens</button>
         <button id="skipButton" class="buttons">Sla deze vraag over</button>
     </div>
