W.I.P. voted answer marked

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <h1 id="title">Titel</h1>
         <p id="statement">Statement</p>
 
-        <button id="proButton" class="buttons">Eens</button>
-        <button id="neitherButton" class="buttons">Geen van beide</button>
-        <button id="contraButton" class="buttons">Oneens</button>
-        <button id="skipButton" class="buttons">Sla deze vraag over</button>
+        <button id="pro" class="buttons">Eens</button>
+        <button id="neither" class="buttons">Geen van beide</button>
+        <button id="contra" class="buttons">Oneens</button>
+        <button id="skip" class="buttons">Sla deze vraag over</button>
     </div>
 
     <div id="partyContainer" class="d-none">
