Displaying parties as list

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div id="partyContainer" class="d-none">
         <h1>Partijen</h1>
-        <p>De rest komt nog...</p>
+        <ul id="partyName"></ul>
     </div>
     
     <!-- Bootstrap javascript -->
