--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div id="importantStatementsContainer" class="d-none">
         <h1>Belangrijke stellingen</h1>
         <p>Hier moet de gebruiker stellingen kiezen die hij/zij belangrijk vindt.</p>
+        <div id="subjectTitle"></div>
     </div>
 
     <!-- currentContainer => 3 (importantPartiesContainer) -->
