Namechange function removeChild, added checkboxes for party selection

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <div id="importantPartiesContainer" class="d-none">
         <h1>Belangrijke partijen</h1>
         <p>Hier moet de gebruiker partijen kiezen die hij/zij belangrijk vindt.</p>
+        <div id="partySelection"></div>
     </div>
 
     <!-- currentContainer => 4 (resultContainer) -->
